# expo-easy-passkey

./: .fallowrc.json  .gitignore  CONTEXT.md  Cargo.toml  README.md  RELEASING.md  lefthook.yml  oxfmt.json  oxlint.config.ts  oxlint.json  package.json  pnpm-lock.yaml  tsconfig.json
.changeset/: config.json  initial-alpha-release.md  pre.json  safe-unsupported-runtime.md
.github/workflows/: ci.yml  release.yml
apps/docs/: package.json  source.config.ts  tsconfig.json
apps/example/: App.tsx  CHANGELOG.md  app.json  metro.config.cjs  package.json  tsconfig.json
apps/example-backend/: jest.config.mjs  package.json  tsconfig.json  vercel.json
crates/passkey-core/: Cargo.toml
crates/passkey-core/src/: lib.rs
crates/passkey-core/test-vectors/: ceremonies.json
crates/passkey-ffi/: Cargo.toml
crates/passkey-ffi/src/: lib.rs
scripts/: build-rust-artifacts.sh  build-rust-artifacts.test.sh  check-bindings.sh  check-native-artifact-drift.sh  check-native-artifact-drift.test.sh  generate-bindings.sh  prepare-trusted-native-artifacts.sh  prepare-trusted-native-artifacts.test.sh  record-rust-artifact-metadata.sh  record-rust-artifact-metadata.test.sh  smoke-test-packaged-native-artifacts.sh  smoke-test-packaged-native-artifacts.test.sh  test-android-module.sh  test-ios-module.sh  verify-release-acceptance.sh  verify-release-acceptance.test.sh
scripts/ffi-smoke/: uniffi-contract-version.c
scripts/lib/: sha256.sh  verify-native-artifact-metadata.py
tooling/jest/: jest.config.mjs  package.json
tooling/oxc/: oxfmt.json  oxlint.json  package.json
(+42 files in other folders)
